--- a/public/chat.html
+++ b/public/chat.html
@@ -4,25 +4,27 @@
 <head>
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png">
-    <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <div class="chat">
         <div id="sidebar" class="chat__sidebar">
-
         </div>
         <div class="chat__main">
             <div id="messages" class="chat__messages"></div>
 
             <div class="compose">
                 <form id="message-form">
-                    <input name="message" placeholder="Message" required autocomplete="off">
+                    <input name="message" placeholder="Word" maxlength="8" required autocomplete="off">
                     <button>Send</button>
                 </form>
                 <button id="send-location">Send location</button>
             </div>
         </div>
+        <div class="indicator"></div>
+
+        <div id="toggle">read mode</div>
     </div>
 
     <script id="message-template" type="text/html">
@@ -54,6 +56,7 @@
             {{/users}}
         </ul>
     </script>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
