--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,15 @@
     <head>
         <title>Chat App</title>
         <link rel="icon" href="/img/favicon.png">
-        <link rel="stylesheet" href="/css/styles.min.css">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
         <div class="centered-form">
             <div class="centered-form__box">
-                <h1>Join</h1>
                 <form action="/chat.html">
-                    <label>Display name</label>
-                    <input type="text" name="username" placeholder="Display name" required>
-                    <label>Room</label>
+                    <input type="text" name="username" placeholder="Name" required>
                     <input type="text" name="room" placeholder="Room" required>
-                    <button>Join</button>
+                    <button style="opacity:0;pointer-events:none;position:absolute">Join</button>
                 </form>
             </div>
         </div>
