--- a/public/chat.html
+++ b/public/chat.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <title>Chat App</title>
-    <link rel="icon" href="/img/favicon.png">
+    <title>Uncommon Words</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
