--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chat App</title>
-        <link rel="icon" href="/img/favicon.png">
+        <title>Uncommon Words</title>
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
