--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
         <div class="centered-form">
             <div class="centered-form__box">
                 <form action="/chat.html">
-                    <input type="text" name="username" placeholder="Name" required>
-                    <input type="text" name="room" placeholder="Room" required>
+                    <input type="text" name="username" placeholder="Enter writer name" required>
+                    <input type="text" name="room" placeholder="Enter session name" required>
                     <button style="opacity:0;pointer-events:none;position:absolute">Join</button>
                 </form>
             </div>
