--- a/public/chat.html
+++ b/public/chat.html
@@ -27,8 +27,8 @@
     </div>
 
     <script id="message-template" type="text/html">
-            <div class="message">
-                <p>
+            <div  class="message  {{username}}">
+                <p >
                     <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
