adding all sorts

--- a/public/chat.html
+++ b/public/chat.html
@@ -44,10 +44,14 @@
 
 
                 <div class="sort-group">
-            <button id="sort-button-alphabet">Sort Alphabetically</button>
-            <button id="sort-button-author">Sort by Author</button>
-            <button id="sort-button-length">Sort by Length (A-Z)</button>
-            <button id="sort-button-length-reverse">Sort by Length (Z-A)</button>
+            <button id="sort-button-alphabet">Sort Alphabetically<br>(A-Z)</button>
+            <button id="sort-button-alphabet-reverse">Sort Alphabetically<br>(Z-A)</button>
+            <button id="sort-button-author">Sort by Author<br>(A-Z)</button>
+            <button id="sort-button-author-reverse">Sort by Author<br>(Z-A)</button>
+            <button id="sort-button-time">Sort by Time<br>(A-Z)</button>
+            <button id="sort-button-time-reverse">Sort by Time<br>(Z-A)</button>
+            <button id="sort-button-length">Sort by Length<br>(A-Z)</button>
+            <button id="sort-button-length-reverse">Sort by Length<br>(Z-A)</button>
         </div>
                <!--<div class="anchor anchor_1">
 
