--- a/public/chat.html
+++ b/public/chat.html
@@ -106,7 +106,7 @@
     <script id="message-template" type="text/html">
 
             
-            <div style="color: {{color}}"  class="message  {{username}}">
+            <div style="color: {{username}}; background-color: {{username}};"  class="message  {{username}}">
                 <p class="meta">
                     <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
