--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <body>
         <div class="centered-form">
             <div class="centered-form__box">
+                <div class="color_text">Choose a color</div>
                 <form action="/chat.html">
-                    <input type="text" name="username" placeholder="Enter writer name" required>
+                    <input type="color" name="username" placeholder="Enter writer name" required >
                     <input type="text" name="room" placeholder="Enter session name" required>
                     <button style="opacity:0;pointer-events:none;position:absolute">Join</button>
                 </form>
