--- a/public/chat.html
+++ b/public/chat.html
@@ -118,7 +118,7 @@
 
         <div class="btn-question">?</div>
 
-        <div class="btn-sessions">Sessions</div>
+        <a href="https://words.uncommonsessions.space/" class="btn-sessions">Home</a>
     </div>
 
 
