--- a/public/chat.html
+++ b/public/chat.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Uncommon Words</title>
+    <title>Uncommon Sessions – Words</title>
+    <link rel="icon" href="/img/words.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -97,6 +98,8 @@
                 Invite
             </div>
 
+            <div class="roomname"></div>
+
             <div class="slider-container">
                 <input type="range" min="1" max="10" value="2" class="slider">
               </div>
@@ -118,11 +121,16 @@
 
         <div class="btn-question">?</div>
 
+        <div class="invite-overlay">To invite other users, all you need to do is share the curent URL to the person(s) you wish to join only. Note that any content recorded in this sessions before they arrived will not be accessible to them.
+
+            <div class="copy-url">Copy Url</div>
+        </div>
 
         <div class="info__overlay">
 
 
    
+
    
     
     
