--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Uncommon Words</title>
+        <title>Uncommon Sessions – Words</title>
         <link rel="stylesheet" href="/css/styles.css">
+        <link rel="icon" href="/img/words.png" type="image/x-icon">
     </head>
     <body>
         <div class="centered-form">
