--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,13 @@
                     <button style="opacity:0;pointer-events:none;position:absolute">Join</button>
                 </form>
             </div>
+            <p>
+                By assigning a name to the session a new url will be automatically created.
+Participants with this url can access the session directly.
+
+<a href="https://uncommonsessions.space/">Read more</a>
+
+            </p>
         </div>
     </body>
 </html>
